CAR/deploy/kubernetes/DLS/django/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.org/websocket-services: django-service
spec:
  tls:
    - hosts:
        - car.diamond.ac.uk
  rules:
    - host: car.diamond.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port: 
                  number: 8000
